Fix overflow in dropdown in the sidebar for Firefox.

--- a/app/view/sass/modules/_aside.scss
+++ b/app/view/sass/modules/_aside.scss
@@ -57,7 +57,6 @@ aside {
 
     .dropdown-menu .btn-link {
       display: block;
-      width: 100%;
       text-align: left;
       margin-bottom: 4px;
     }
